portfolio-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: portfolio-service
  namespace: portfolio-prod
spec:
  selector:
    app: portfolio-deployment
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 80
  type: NodePort
